k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: app
spec:
  replicas: 5
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
      annotations:
        prometheus.io/scrape: 'true' 
        prometheus.io/port: '5000'
    spec:
      containers:
      - name: app
        image: natanpiress/pipeline:56.08
        ports:
        - containerPort: 80
