k8s/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: app-services
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 80
      
  type: NodePort
