k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teste-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: testeingress.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: teste
                port:
                  number: 80
